Thu Jun 07 14:31:40 BST 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/index.html,docs/valueranges.rst: Add document
	  describing how to use Xapian::ValueRangeProcessor.

Thu Jun 07 14:16:01 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test of custom ValueRangeProcessor
	  subclass (qp_value_customrange1).

Thu Jun 07 10:01:46 BST 2007  Olly Betts <olly@survex.com>

	* common/serialise.h,tests/harness/testsuite.h: Use XAPIAN_NORETURN()
	  to mark functions which never return.

Thu Jun 07 01:28:00 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu Jun 07 01:02:22 BST 2007  Olly Betts <olly@survex.com>

	* examples/simpleexpand.cc: Fix off-by-one error when creating the
	  fake RSet (picked up to 4 documents, not up to 5).

Wed Jun 06 17:17:05 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add documentation comments for
	  ValueRangeProcessor and subclasses (mostly fixes bug#155, but
	  I'd like to add an overview document too).

Wed Jun 06 16:04:08 BST 2007  Olly Betts <olly@survex.com>

	* tests/testdata/flint-0.9.9/: Minimal example of a Flint database
	  from Xapian 0.9.9.
	* tests/api_db.cc: Use a real 0.9.9 flint database instead of faking
	  it by fudging with the "iamflint" file in a current one.
	  flintdatabaseformaterror1 now also checks for opening with the
	  Database ctor as well as with Flint::open().  The writing test from
	  flintdatabaseformaterror1 is now flintdatabaseformaterror2 which
	  additionally tests opening with the WritableDatabase ctor as well as
	  with Flint::open().  The old flintdatabaseformaterror2 is now
	  flintdatabaseformaterror3.

Wed Jun 06 15:44:08 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Don't check for pre-0.6 databases
	  here (since they'll be quartz format anyway - the check is just an
	  overenthusiastic cut-and-paste from quartz).
