@@ -1,3 +1,7 @@
+Thu Jun 07 14:32:22 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/queryparsertest.cc: Enhance qp_value_customrange1.
+
 Thu Jun 07 14:31:40 BST 2007  Olly Betts <olly@survex.com>
 
 	* docs/Makefile.am,docs/index.html,docs/valueranges.rst: Add document
